<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundContainer"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="@color/colorMyGray"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:text="@string/solutions_box_one_text"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_gravity="right"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:background="@color/colorMyRed"
            android:text="@string/solutions_box_two_text"
            android:textColor="@color/colorWhite"
            android:textSize="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@color/colorMyYellow"
            android:paddingTop="32dp"
            android:text="@string/solutions_box_three_text"
            android:textColor="@color/colorWhite"
            android:textSize="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:background="@color/colorMyGreen"
            android:paddingTop="55dp"
            android:text="@string/solutions_box_four_text"
            android:textColor="@color/colorWhite"
            android:textSize="16dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="330dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="@color/colorLightGray"
            android:text="@string/solutions_button_red_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="310dp"
            android:layout_weight="1"
            android:background="@color/colorLightGray"
            android:text="@string/solutions_button_yellow_text"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="330dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="2"
            android:background="@color/colorLightGray"
            android:text="@string/solutions_button_green_text"
            android:textAlignment="textEnd" />

    </LinearLayout>
</LinearLayout>